scripts/example/orders/deploy-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: orders-b
  name: orders-b
spec:
  selector:
    matchLabels:
      app: orders-b
  template:
    metadata:
      labels:
        app: orders-b
    spec:
      containers:
        - image: nginx
          imagePullPolicy: Always
          name: nginx
