scripts/example/orders/egress-from-orders-a.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-from-orders-a
spec:
  podSelector:
    matchLabels:
      app: orders-a
  policyTypes:
    - Egress
  egress:
    - { }
